wazuh-kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wazuh-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    # kubernetes.io/ingress.class: azure/application-gateway
      # appgw.ingress.kubernetes.io/appgw-ssl-certificate: <APP_GATEWAY_CERT_NAME>
spec:
  ingressClassName: nginx
  rules:
  - host: wazuh.40.76.252.201.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dashboard
            port:
              number: 443
